src/snapshots/changesette__changeset__tests__follows_symlinked_changesets.snap
---
source: src/changeset.rs
expression: "load_ok(\"symlink\")"
---
[
    LoadedChange {
        file_name: "changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md",
        in_pre: false,
        releases: [
            (
                "ublacklist",
                Some(
                    Patch,
                ),
            ),
        ],
        summary: "Fix something recorded in a symlinked changeset.",
    },
]
