src/snapshots/changesette__changeset__tests__keeps_multi_line_summaries.snap
---
source: src/changeset.rs
expression: "load_ok(\"multi-line-body\")"
---
[
    LoadedChange {
        file_name: "changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md",
        releases: [
            (
                "ublacklist",
                Some(
                    Minor,
                ),
            ),
        ],
        summary: "First line of body\nsecond line of body\n\n- a bullet\n- another bullet",
    },
]
