src/snapshots/changesette__changeset__tests__loads_pre_changesets_last_with_prefixed_ids.snap
---
source: src/changeset.rs
expression: changes
---
[
    LoadedChange {
        file_name: "brave-lions-dance.md",
        in_pre: false,
        releases: [
            (
                "ublacklist",
                Some(
                    Minor,
                ),
            ),
        ],
        summary: "A new changeset, loaded before the pre ones",
    },
    LoadedChange {
        file_name: "atomic-pugs-smile.md",
        in_pre: true,
        releases: [
            (
                "ublacklist",
                Some(
                    Patch,
                ),
            ),
        ],
        summary: "Parked first: file names are compared within the group",
    },
    LoadedChange {
        file_name: "zany-moons-sing.md",
        in_pre: true,
        releases: [
            (
                "ublacklist",
                Some(
                    Major,
                ),
            ),
        ],
        summary: "Parked second",
    },
]
