src/snapshots/changesette__changeset__tests__parses_a_file_written_by_the_upstream_cli.snap
---
source: src/changeset.rs
expression: "load_ok(\"upstream-generated\")"
---
[
    LoadedChange {
        file_name: "olive-pots-repeat.md",
        releases: [
            (
                "ublacklist",
                Some(
                    Minor,
                ),
            ),
        ],
        summary: "Add SERPINFO satellites support",
    },
]
