src/snapshots/changesette__changeset__tests__parses_a_multi_package_file_written_by_the_upstream_cli.snap
---
source: src/changeset.rs
expression: "load_ok(\"upstream-multi-package\")"
---
[
    LoadedChange {
        file_name: "frank-cycles-follow.md",
        in_pre: false,
        releases: [
            (
                "ublacklist",
                Some(
                    Minor,
                ),
            ),
            (
                "ublacklist-docs",
                Some(
                    Patch,
                ),
            ),
        ],
        summary: "Touches two packages.",
    },
]
