src/snapshots/changesette__changeset__tests__parses_a_none_file_written_by_the_upstream_cli.snap
---
source: src/changeset.rs
expression: "load_ok(\"upstream-none\")"
---
[
    LoadedChange {
        file_name: "wild-candies-bet.md",
        releases: [
            (
                "ublacklist",
                None,
            ),
        ],
        summary: "Declares no bump for the package.",
    },
]
