src/snapshots/changesette__changeset__tests__parses_a_two_package_changeset.snap
---
source: src/changeset.rs
expression: "load_ok(\"two-packages\")"
---
[
    LoadedChange {
        file_name: "changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md",
        releases: [
            (
                "ublacklist",
                Some(
                    Minor,
                ),
            ),
            (
                "ublacklist-docs",
                Some(
                    Patch,
                ),
            ),
        ],
        summary: "Touches two packages",
    },
]
